/**
\page changelog Changelog

\section c018 version 0.17 -> 0.17+
 - The READ CAPACITY scsi command now properly returns the number of
   the last LBA (n-1); not the number of LBA's (n). INITIALIZE now
   works properly on a scsi disk. (18-feb-2008, Camiel Vanderhoeven)
 - Added READ_LONG scsi command, and support for MODE_SENSE
   changeable parameter pages. (last bit needed to get SCSI
   working on OpenVMS) (16-feb-2008, Camiel Vanderhoeven)
 - The owner of the SCSI bus is allowed to re-arbitrate for it. 
   (16-feb-2008, Camiel Vanderhoeven)
 - Added Symbios 53C810 SCSI controller. (16-feb-2008, Camiel
   Vanderhoeven)
 - Moved keyboard code into it's own class. (CKeyboard). 
   (12-feb-2008, Camiel Vanderhoeven)
 - Show originating device name on memory errors. (08-feb-2008, 
   Camiel Vanderhoeven)
 - Set default keyboard translation to scanset 3 (PS/2). 
   (08-feb-2008, Camiel Vanderhoeven)
 - On GNU systems, display a backtrace when a segmentation fault
   occurs, and DEBUG_BACKTRACE has been defined. (07-feb-2008, Brian
   Wheeler)
 - Fixed registration of ROM expansion address. (06-feb-2008, Camiel
   Vanderhoeven)
 - Check for FPEN in old floating point code. (06-feb-2008, Camiel
   Vanderhoeven)
 - Proper interrupt handling in serial port device. Fixes an
   initialization bug spotted by David Hittner. (06-feb-2008, Camiel
   Vanderhoeven)
 - Disable unaligned access check alltogether; it doesn't work properly
   for some reason. (05-feb-2008, Camiel Vanderhoeven)
 - The new floating point code (21-jan-2008) has some unidentified
   problems. The OpenVMS installation routine fails with this new code. 
   For now, the old floating point code has been restored, and the new
   floating-point code is used only when HAVE_NEW_FP has been defined.
   The new code should be fixed, so we can take advantage of floating
   point exceptions. (05-feb-2008, Camiel Vanderhoeven)
 - Display a message when system initialization has failed. (05-feb-2008,